testing/src/java7srclisting/errors/ErrorV9.java
package java7srclisting.errors;

public class ErrorV9 {

    int a = test();

    int test(){
        if (true)
            ;
        else {

        }
        return 0;
    }

}
